--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
+
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.image{
+  width: 245px;
+  height: 245px;
+  margin: 10px 0;
+  margin-left: 6px;
+}
+
